barkod align fixed

--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,15 +1,43 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap%27');
 body,html {
     width: 100%;
     height: 100%;
-    background-color: rgb(196, 234, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: hsl(212, 45%, 89%);
 }
 .main-box{
-    height: 400px;
-    width: 250px;
+    height: 390px;
+    width: 230px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 650px;
-    
+    background-color: aliceblue;
+    border-radius: 10px;
+    padding: 1px;
+    text-align: center;
+}
+
+.QR-box {
+    background-size: cover;  
+    background-repeat: no-repeat;
+    background-image: url(./images/image-qr-code.png);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 100px;
+    border-radius: 10px;
+
+}
+
+.text-box {
+   justify-content: center;
+   align-items: center;
+   padding: 5px;
+   font-family: 'Outfit', sans-serif;
+   font-size: 15px;
+
+
 }
